fixed a bug where text would overflow in cards

--- a/views/src/styles/Card.css
+++ b/views/src/styles/Card.css
@@ -45,4 +45,6 @@
 #title {
     font-style: italic;
     flex-grow: 1;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
